packages/rust/crates/xiuxian-wendao/tests/snapshots/gateway/studio/repo_overview_endpoint_json.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
assertion_line: 9
expression: value
---
{
  "display_name": "GatewaySyncPkg",
  "doc_count": 2,
  "example_count": 0,
  "hierarchical_uri": "repo://gateway-sync",
  "hierarchy": [
    "repo",
    "gateway-sync"
  ],
  "module_count": 1,
  "repo_id": "gateway-sync",
  "revision": "[revision]",
  "symbol_count": 0
}
